syntax = "proto3";
package shikanime.elkia.core.v1alpha1;

option go_package = "go.shikanime.studio/elkia/pkg/api/core/v1alpha1";

message SyncCommand {
  uint32 sequence = 1;
  uint32 code = 2;
}

message IdentifierCommand {
  uint32 sequence = 1;
  string identifier = 2;
}

message PasswordCommand {
  uint32 sequence = 1;
  string password = 2;
}

message HeartbeatCommand {}

// TODO: unidentified f_stash_end frame
message FStashEndCommand {}

// TODO: unidentified c_close frame
message CCloseCommand {}

// TODO: unidentified lbs frame
message LBSCommand { int32 type = 1; }

message MultiTargetCommand {
  string skill_id = 1;
  uint32 target_id = 2;
}

message MultiTargetListCommand {
  uint32 target_amount = 1;
  repeated MultiTargetCommand targets = 2;
}

enum RequestType {
  REQUESTED = 0;
  LIST = 1;
  CONFIRMED = 2;
  CANCELLED = 3;
  DECLINED = 4;
}

message RequestCommand {
  uint32 character_id = 1;
  RequestType type = 2;
}

enum CharacterOptions {
  EXCHANGE_BLOCKED = 0;
  FRIEND_REQUEST_BLOCKED = 1;
  FAMILY_REQUEST_BLOCKED = 2;
  WHISPER_BLOCKED = 3;
  GROUP_REQUEST_BLOCKED = 4;
  GROUP_SHARING = 5;
  MOUSE_AIM_LOCK = 6;
  HERO_CHAT_BLOCKED = 7;
  EMOTICONS_BLOCKED = 8;
  QUICK_GET_UP = 9;
  HP_BLOCKED = 10;
  BUFF_BLOCKED = 11;
  MINILAND_INVITE_BLOCKED = 12;
}

message GlobalOptionsCommand { CharacterOptions option = 1; }

message CommandCommand {
  uint32 sequence = 1;
  oneof payload {
    bytes raw_command = 2;
    HeartbeatCommand heartbeat_command = 3;
    FStashEndCommand f_stash_end_command = 4;
    CCloseCommand c_close_command = 5;
    LBSCommand lbs_command = 6;
    MultiTargetListCommand multi_target_list_command = 7;
    RequestCommand request_command = 8;
    GlobalOptionsCommand global_options_command = 9;
  }
}

message ChannelInteractRequest {
  oneof payload {
    SyncCommand sync_command = 1;
    IdentifierCommand identifier_command = 2;
    PasswordCommand password_command = 3;
    CommandCommand command_command = 5;
  }
}

enum CharacterClass {
  ADVENTURER = 0;
  SORCERER = 1;
  ARCHER = 2;
  SWORDMAN = 3;
  MARTIAL_ARTIST = 4;
}

enum Sex {
  Male = 0;
  Female = 1;
}

enum CharacterHairColor {
  MauveTaupe = 0;
  Cerise = 1;
  SanMarino = 2;
  Affair = 3;
  Dixie = 4;
  Raven = 5;
  Killarney = 6;
  Nutmeg = 7;
  Saddle = 8;
  Red = 9;
}

enum CharacterHairStyle {
  StyleA = 0;
  StyleB = 1;
  StyleC = 2;
  StyleD = 3;
  Shaved = 4;
}

enum Faction {
  Neutral = 0;
  Angel = 1;
  Demon = 2;
}

message Character {
  string id = 1;
  CharacterClass class = 2;
  Sex sex = 3;
  CharacterHairColor hair_color = 4;
  CharacterHairStyle hair_style = 5;
  Faction faction = 6;
  int32 reputation = 7;
  int32 dignity = 8;
  int32 compliment = 9;
  int32 health = 10;
  int32 mana = 11;
  string name = 12;
  int32 hero_experience = 13;
  int32 hero_level = 14;
  int32 job_experience = 15;
  int32 job_level = 16;
  int32 experience = 17;
  int32 level = 18;
}

message CharacterListEvent {
  uint32 code = 1;
  repeated Character character_events = 2;
}

message ChannelInteractResponse {
  oneof payload {
    ErrorEvent error_event = 1;
    InfoEvent info_event = 2;
    CharacterListEvent character_list_event = 3;
  }
}

service Gateway {
  // ChannelInteract is a bi-directional stream that is used to interact with
  // the channel server
  rpc ChannelInteract(stream ChannelInteractRequest)
      returns (stream ChannelInteractResponse);
}

message CharacterAddRequest {
  string id = 1;
  string name = 2;
  CharacterClass class = 3;
  Sex sex = 4;
  CharacterHairColor hair_color = 5;
  CharacterHairStyle hair_style = 6;
}

message CharacterAddResponse {}

message CharacterRemoveRequest { string id = 1; }

message CharacterRemoveResponse {}

message CharacterUpdateRequest {
  string id = 1;
  optional uint32 world_id = 2;
  optional uint32 channel_id = 3;
  optional string name = 4;
  optional string address = 5;
  optional uint32 population = 6;
  optional uint32 capacity = 7;
}

message CharacterUpdateResponse {}

message CharacterListRequest { string identity_id = 1; }

message CharacterListResponse { repeated Character character_events = 1; }

service Lobby {
  // CharacterAdd adds a new character to the world.
  rpc CharacterAdd(CharacterAddRequest) returns (CharacterAddResponse);

  // CharacterRemove removes an existing character from the world.
  rpc CharacterRemove(CharacterRemoveRequest) returns (CharacterRemoveResponse);

  // CharacterUpdate updates an existing character in the world.
  rpc CharacterUpdate(CharacterUpdateRequest) returns (CharacterUpdateResponse);

  // CharacterList lists all characters in the world.
  rpc CharacterList(CharacterListRequest) returns (CharacterListResponse);
}
